Some codes for Lab tests.

--- a/PyLib/0PyBasic.ipynb
+++ b/PyLib/0PyBasic.ipynb
@@ -12,14 +12,7 @@
     "**虚拟机**: VirtualBoox,VMware<br>\n",
     "**虚拟环境**: Anaconda,Virtualenv,Enthought<br>\n",
     "**容器**: Docker<br>\n",
-    "conda安装总会出现连接超时的问题\n",
-    "\n",
-    "#### ***References***\n",
-    "[Geo-python](https://geo-python-site.readthedocs.io/en/latest/)<br>\n",
-    "[Style Guide for Python Code](https://www.python.org/dev/peps/pep-0008/)<br>\n",
-    "[The Zen of Python](https://www.python.org/dev/peps/pep-0020/)<br>\n",
-    "[Jupyter Notebook 使用技巧](https://blog.csdn.net/deephub/article/details/108689139)<br>\n",
-    "\n"
+    "conda安装总会出现连接超时的问题\n"
    ]
   },
   {
@@ -62,9 +55,6 @@
     "Ctrl + / 会#\n",
     "\n",
     "要查看键盘快捷键完整列表，进入「Help > Keyboard Shortcuts」。你一定要经常看这些快捷键，因为常会添加新的。\n",
-    "\n",
-    "**Extension**: toc\n",
-    "\n",
     "\n",
     "#### **魔法符号－[Magics](https://supergis.gitbooks.io/git_notebook/content/doc/jupyter_magics.html)**\n",
     "常用的: !ls  %%!  %matplotlib inline   %timeit np.linalg.eigvals(np.random.rand(100,100))\n"
@@ -118,12 +108,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e0468724-7f19-4304-8835-eafc82add8e6",
+   "cell_type": "markdown",
+   "id": "8b8f637c-a40e-4fae-bc09-4eb0d45b9eaf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### **扩展程序**: \n",
+    "toc-extension; jupyterlab-git; Collapsible headings; Google Drive Extension and so on."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae79f421-0fd4-4db4-a832-23299dd93033",
+   "metadata": {},
+   "source": [
+    "### ***References***\n",
+    "[Geo-python](https://geo-python-site.readthedocs.io/en/latest/)<br>\n",
+    "[Style Guide for Python Code](https://www.python.org/dev/peps/pep-0008/)<br>\n",
+    "[The Zen of Python](https://www.python.org/dev/peps/pep-0020/)<br>\n",
+    "[Jupyter Notebook 使用技巧](https://blog.csdn.net/deephub/article/details/108689139)<br>"
+   ]
   }
  ],
  "metadata": {
@@ -143,7 +146,10 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
-  }
+  },
+  "toc-autonumbering": false,
+  "toc-showcode": false,
+  "toc-showmarkdowntxt": false
  },
  "nbformat": 4,
  "nbformat_minor": 5
