--- a/PyLib/0PyBasic.ipynb
+++ b/PyLib/0PyBasic.ipynb
@@ -5,7 +5,7 @@
    "id": "9faced5a-f94f-46ae-9edd-7d6d62343549",
    "metadata": {},
    "source": [
-    "### ***Python & git***\n",
+    "## ***Python & git***\n",
     "**'好的'变量名**:1)下划线分隔,例如 room_student_id = \"10211\"; 2)例如roomStudentID = \"10211\"<br>\n",
     "**有用的库**: Python, Jupyter, IPython, numpy, matplotlib, pandas, Scipy<br>\n",
     "**加速运算速度**: Cpython, numba, mpi4py, petsc4py, PyCUDA<br>\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "2ca7a6e5-b688-4d87-ada6-cb796ed22e3a",
    "metadata": {},
    "outputs": [],
@@ -38,26 +38,12 @@
    "id": "983887da-4787-4132-b210-e9d27f838988",
    "metadata": {},
    "source": [
-    "### ***Jupyter***\n",
-    "**快捷键**：\n",
-    "A 会在活跃单元之上插入一个新的单元，B 会在活跃单元之下插入一个新单元。\n",
-    "\n",
-    "连续按两次 D，可以删除一个单元。\n",
-    "\n",
-    "撤销被删除的单元，按 Z。\n",
-    "\n",
-    "Ctrl + S 保存进度。\n",
-    "\n",
-    "Ctrl + Enter 会运行单元块。\n",
-    "\n",
-    "Alt + Enter 不止会运行你的单元块，还会在下面添加一个新单元。\n",
-    "\n",
-    "Ctrl + / 会#\n",
-    "\n",
-    "要查看键盘快捷键完整列表，进入「Help > Keyboard Shortcuts」。你一定要经常看这些快捷键，因为常会添加新的。\n",
-    "\n",
+    "## ***Jupyter*** [官网](https://jupyter.org)\n",
     "#### **魔法符号－[Magics](https://supergis.gitbooks.io/git_notebook/content/doc/jupyter_magics.html)**\n",
-    "常用的: !ls  %%!  %matplotlib inline   %timeit np.linalg.eigvals(np.random.rand(100,100))\n"
+    "常用的: !ls  **%matplotlib inline**   %timeit np.linalg.eigvals(np.random.rand(100,100))<br>\n",
+    "\n",
+    "#### **扩展程序**: \n",
+    "**ipywidgets**; toc-extension; **jupyterlab-git**; Collapsible headings; 流程图Drawio; Google Drive Extension and so on.<br>"
    ]
   },
   {
@@ -69,12 +55,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06ac29228144412f916154afafb14155",
+       "model_id": "61c45728cf224b0fa0df63e1823242ce",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=100, description='x', max=300, min=-100), Output()), _dom_classes=('widg…"
+       "interactive(children=(IntSlider(value=10, description='x', max=30, min=-10), Output()), _dom_classes=('widget-…"
       ]
      },
      "metadata": {},
@@ -101,10 +87,9 @@
     "from ipywidgets import widgets\n",
     "\n",
     "def f(x):\n",
-    "    print(x)\n",
-    "    y = np.arange(x)\n",
-    "    plt.plot(y,y**2,'*')\n",
-    "widgets.interact(f,x=100)\n"
+    "    y = np.random.rand(abs(x+1))\n",
+    "    plt.plot(y,'*')\n",
+    "widgets.interact(f,x=10)\n"
    ]
   },
   {
@@ -112,8 +97,11 @@
    "id": "8b8f637c-a40e-4fae-bc09-4eb0d45b9eaf",
    "metadata": {},
    "source": [
-    "#### **扩展程序**: \n",
-    "toc-extension; jupyterlab-git; Collapsible headings; Google Drive Extension and so on."
+    "#### **快捷键**\n",
+    "A 会在活跃单元之上插入一个新的单元，B 会在活跃单元之下插入一个新单元。<br>连续按两次 D，可以删除一个单元。<br>\n",
+    "撤销被删除的单元，按 Z。<br>Ctrl + S 保存进度。<br>Ctrl + Enter 会运行单元块。<br>Alt + Enter 不止会运行你的单元块，还会在下面添加一个新单元。<br>\n",
+    "Ctrl + / 会#<br>要查看键盘快捷键完整列表，进入「Help > Keyboard Shortcuts」。你一定要经常看这些快捷键，因为常会添加新的。<br>\n",
+    "\n"
    ]
   },
   {
@@ -121,7 +109,7 @@
    "id": "ae79f421-0fd4-4db4-a832-23299dd93033",
    "metadata": {},
    "source": [
-    "### ***References***\n",
+    "## ***References***\n",
     "[Geo-python](https://geo-python-site.readthedocs.io/en/latest/)<br>\n",
     "[Style Guide for Python Code](https://www.python.org/dev/peps/pep-0008/)<br>\n",
     "[The Zen of Python](https://www.python.org/dev/peps/pep-0020/)<br>\n",
