--- a/PyLib/Untitled1.ipynb
+++ b/PyLib/Untitled1.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "da887e71-b2a4-4052-951c-e232e2497960",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### **Geodynamics**\n",
     "\n",
@@ -17,9 +19,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8f8702c2-2bbc-4326-8139-16a97c2ed291",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -35,10 +39,17 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "LitModOutputName='post_processing_output.dat';\n",
+    "LitMod=np.loadtxt(LitModOutputName);\n",
+    "\n",
     "def main():\n",
     "    a = 12\n",
     "    print(a)\n",
     "\n",
+    "def m2py():\n",
+    "    a = 10\n",
+    "    print(a)\n",
+    "    \n",
     "def f(x):\n",
     "    y = np.random.rand(abs(x+1))\n",
     "    plt.plot(y,'*')\n",
@@ -53,7 +64,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "adbdb158-c4c2-40b8-a80d-630490a74e50",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
