Some good codes.

--- a/PyLib/0PyBasic.ipynb
+++ b/PyLib/0PyBasic.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "source": [
     "## ***Jupyter*** [官网](https://jupyter.org)\n",
-    "#### **魔法符号－[Magics](https://supergis.gitbooks.io/git_notebook/content/doc/jupyter_magics.html)**\n",
+    "#### **魔法符号－[IPython](https://ipython.readthedocs.io/en/stable/index.html) or [Magics](https://supergis.gitbooks.io/git_notebook/content/doc/jupyter_magics.html)**\n",
     "常用的: !ls  **%matplotlib inline**   %timeit np.linalg.eigvals(np.random.rand(100,100))<br>\n",
     "\n",
     "#### **扩展程序**: \n",
