--- a/PyLib/Check.ipynb
+++ b/PyLib/Check.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 60,
    "id": "26a3c456-3c4c-4b74-8b32-a309d73e262c",
    "metadata": {},
    "outputs": [
@@ -26,10 +26,14 @@
        " 'ystp',\n",
        " 'RX1',\n",
        " 'RY1',\n",
-       " 'RC1']"
+       " 'RC1',\n",
+       " 'bleft',\n",
+       " 'bright',\n",
+       " 'btop',\n",
+       " 'bbottom']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,31 +46,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 63,
    "id": "344ca436-d857-445c-a8ea-645d8d6fdff5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['__header__', '__version__', '__globals__', 'META', 'MI', 'MRHO', 'MX', 'MY', 'RC1', 'RX1', 'RY1', 'bbottom', 'bleft', 'bright', 'btop', 'dx', 'dy', 'etan0', 'etan1', 'etas0', 'etas1', 'g', 'i', 'j', 'markmax', 'mxnum', 'mxstep', 'mynum', 'mystep', 'ntimestep', 'pr1', 'prfirst', 'rho0', 'rho1', 'stepmax', 'timemax', 'timesum', 'typ0', 'typ1', 'vx1', 'vy1', 'wtetan', 'wtetas', 'wtnodes', 'xm', 'xmx', 'xn', 'xnum', 'xsize', 'xstp', 'ym', 'ymy', 'yn', 'ynum', 'ysize', 'ystp'])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from scipy.io import loadmat\n",
     "matfile = loadmat('/home/ictja/ownCloud/Stoke/CH20matlabCode/matfile.mat')\n",
     "# print(matfile)\n",
-    "matfile.keys()"
+    "# matfile.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 64,
    "id": "9eef0d52-dd42-40ba-a454-74f7e1e22347",
    "metadata": {},
    "outputs": [
@@ -74,35 +67,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "prfirst\n",
-      "() (1, 1)\n",
       "0.0 0.0\n",
-      "etas1\n",
-      "(51, 51) (51, 51)\n",
       "0.0 0.0\n",
-      "etan1\n",
-      "(50, 50) (50, 50)\n",
       "0.0 0.0\n",
-      "xnum\n",
-      "() (1, 1)\n",
       "0.0 0.0\n",
-      "ynum\n",
-      "() (1, 1)\n",
       "0.0 0.0\n",
-      "xstp\n",
-      "() (1, 1)\n",
       "0.0 0.0\n",
-      "ystp\n",
-      "() (1, 1)\n",
       "0.0 0.0\n",
-      "RX1\n",
-      "(52, 51) (52, 51)\n",
       "0.0 0.0\n",
-      "RY1\n",
-      "(51, 52) (51, 52)\n",
       "0.0 0.0\n",
-      "RC1\n",
-      "(50, 50) (50, 50)\n",
+      "0.0 0.0\n",
+      "0.0 0.0\n",
+      "0.0 0.0\n",
+      "0.0 0.0\n",
       "0.0 0.0\n"
      ]
     }
@@ -112,18 +89,136 @@
     "    data_npz = npzfile[i]\n",
     "    data_mat = matfile[i]\n",
     "    data_difference = data_npz - data_mat\n",
+    "#     print(i)\n",
+    "#     print(data_npz.shape,data_mat.shape)\n",
+    "    print(np.max(data_difference)*1e8,np.min(data_difference)*1e8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "c27b1d04-cf2d-4f5f-8c58-5343f77d44f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['__header__', '__version__', '__globals__', 'L', 'R', 'S'])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.io import loadmat\n",
+    "npzfile = loadmat('PY_LRS.mat')\n",
+    "npzfile.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "55420bec-1728-454e-95b3-5f818dd2244f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['__header__', '__version__', '__globals__', 'L', 'R', 'S'])"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.io import loadmat\n",
+    "matfile = loadmat('/home/ictja/ownCloud/Stoke/CH20matlabCode/matfile_LRS.mat')\n",
+    "# print(matfile)\n",
+    "matfile.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "11431f90-e1e0-45dd-a724-b49487876d2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S\n",
+      "(7500, 1) (7500, 1)\n",
+      "5.548192133457875e-13 -8.948483336461855e-13\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in ('S'):\n",
     "    print(i)\n",
+    "    data_npz = npzfile[i].T\n",
+    "    data_mat = matfile[i]\n",
+    "    data_difference = data_npz - data_mat\n",
+    "    print(data_npz.shape,data_mat.shape)\n",
+    "    print(np.max(data_difference),np.min(data_difference))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "4bc26bb5-1769-4fb5-a42b-2c67bddc1430",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R\n",
+      "(7500, 1) (7500, 1)\n",
+      "0.0 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in ('R'):\n",
+    "    print(i)\n",
+    "    data_npz = npzfile[i]\n",
+    "    data_mat = matfile[i]\n",
+    "    data_difference = data_npz - data_mat\n",
     "    print(data_npz.shape,data_mat.shape)\n",
     "    print(np.max(data_difference)*1e8,np.min(data_difference)*1e8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c27b1d04-cf2d-4f5f-8c58-5343f77d44f6",
+   "execution_count": 80,
+   "id": "45269736-30e8-4701-931e-43202b76a744",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L\n",
+      "(7500, 7500) (7500, 7500)\n",
+      "0.0 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in ('L'):\n",
+    "    print(i)\n",
+    "    data_npz = npzfile[i]\n",
+    "    data_mat = matfile[i]\n",
+    "    data_difference = data_npz - data_mat\n",
+    "    print(data_npz.shape,data_mat.shape)\n",
+    "    print(np.max(data_difference)*1e8,np.min(data_difference)*1e8)"
+   ]
   }
  ],
  "metadata": {
